--- a/apps/oidc-provider-nest/tsconfig.json
+++ b/apps/oidc-provider-nest/tsconfig.json
@@ -1,7 +1,15 @@
 {
-  "extends": "../../tsconfig.json",
   "compilerOptions": {
-    "types": ["node", "jest"]
+    "module": "commonjs",
+    "declaration": true,
+    "removeComments": true,
+    "emitDecoratorMetadata": true,
+    "experimentalDecorators": true,
+    "target": "es2017",
+    "sourceMap": true,
+    "outDir": "./dist",
+    "baseUrl": "./",
+    "incremental": true
   },
-  "include": ["**/*.ts"]
+  "exclude": ["node_modules", "dist"]
 }
