--- a/package.json
+++ b/package.json
@@ -69,15 +69,15 @@
     "express-session": "^1.17.0",
     "geojson-utils": "git+ssh://git@github.com/TamuGeoInnovation/Tamu.GeoInnovation.js.geojsonutils.git",
     "helmet": "^3.21.2",
-    "jsonwebtoken": "^8.5.0",
     "interactjs": "^1.9.19",
+    "jsonwebtoken": "^8.5.0",
     "mapbox-gl": "^1.10.0",
     "mssql": "^6.0.1",
     "mysql": "^2.17.1",
     "ng-pick-datetime": "^7.0.0",
     "ngx-highlightjs": "^4.0.2",
     "nodemailer": "^5.1.1",
-    "oidc-provider": "^5.5.2",
+    "oidc-provider": "^6.21.0",
     "openid-client": "^3.12.1",
     "otplib": "^10.2.3",
     "passport": "^0.4.1",
@@ -86,6 +86,7 @@
     "rxjs": "~6.5.3",
     "sequelize": "^4.44.3",
     "snarkdown": "^1.2.2",
+    "sqlite3": "^4.2.0",
     "tslib": "^1.9.0",
     "typeorm": "^0.2.20",
     "uuid": "^8.1.0",
