TypeORM works with MSSQL now

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -40,6 +40,14 @@
       "port": 7778
     },
     {
+      // This allows debugging node apps (Nest, epxress, etc) that are being served through `ng`
+      // Will attach a debugging listener so it can be debugged in VSCode
+      "name": "Debug Node App (0)",
+      "type": "node",
+      "request": "attach",
+      "port": 7770
+    },
+    {
       "type": "chrome",
       "request": "launch",
       "name": "Launch Chrome against localhost",
