--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "@nestjs/core": "^6.8.3",
     "@nestjs/passport": "^6.1.1",
     "@nestjs/platform-express": "^6.8.3",
+    "@nestjs/serve-static": "^2.1.3",
     "@nestjs/typeorm": "^6.2.0",
     "@nguniversal/express-engine": "^9.1.1",
     "@nguniversal/module-map-ngfactory-loader": "^8.2.6",
