CustomRepositorys baseclass + ClientMetadata class Can I get a hell yeah?!

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -33,5 +33,6 @@
     "yml"
   ],
   "jest.autoEnable": false,
-  "cSpell.enabled": true
+  "cSpell.enabled": true,
+  "editor.formatOnSave": true
 }
