--- a/tsconfig.json
+++ b/tsconfig.json
@@ -90,7 +90,8 @@
       "@tamu-gisc/oidc/provider-nest": ["libs/oidc/provider-nest/src/index.ts"],
       "@tamu-gisc/ues/common/ngx": ["libs/ues/common/ngx/src/index.ts"],
       "@tamu-gisc/common/utils/device/guards": ["libs/common/utils/device/guards/src/index.ts"],
-      "@tamu-gisc/oidc/admin": ["libs/oidc/admin/src/index.ts"]
+      "@tamu-gisc/oidc/admin": ["libs/oidc/admin/src/index.ts"],
+      "@tamu-gisc/oidc/admin-data-access": ["libs/oidc/admin-data-access/src/index.ts"]
     }
   },
   "exclude": ["node_modules", "tmp"]
