--- a/package.json
+++ b/package.json
@@ -58,6 +58,7 @@
     "body-parser": "^1.18.3",
     "chart.js": "^2.9.3",
     "chartjs-plugin-colorschemes": "^0.4.0",
+    "class-transformer": "^0.3.1",
     "class-validator": "^0.11.0",
     "clipboard": "^2.0.4",
     "colornames": "^1.1.1",
