--- a/package.json
+++ b/package.json
@@ -58,6 +58,7 @@
     "body-parser": "^1.18.3",
     "chart.js": "^2.9.3",
     "chartjs-plugin-colorschemes": "^0.4.0",
+    "class-transformer": "^0.3.1",
     "class-validator": "^0.11.0",
     "clipboard": "^2.0.4",
     "colornames": "^1.1.1",
@@ -67,14 +68,14 @@
     "csurf": "^1.11.0",
     "deepmerge": "^4.2.2",
     "document-register-element": "1.13.1",
+    "esri-loader": "~2.10.1",
     "express-rate-limit": "^5.1.3",
     "express-session": "^1.17.0",
     "geojson-utils": "git+ssh://git@github.com/TamuGeoInnovation/Tamu.GeoInnovation.js.geojsonutils.git",
     "got": "^11.3.0",
     "helmet": "^3.23.3",
-    "esri-loader": "~2.10.1",
-    "jsonwebtoken": "^8.5.0",
     "interactjs": "^1.9.19",
+    "jsonwebtoken": "^8.5.0",
     "mapbox-gl": "^1.10.0",
     "mssql": "^6.0.1",
     "mysql": "^2.17.1",
