--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -48,6 +48,19 @@
       "port": 7770
     },
     {
+      // This allows debugging node apps (Nest, epxress, etc) that are being served through `ng`
+      // Will attach a debugging listener so it can be debugged in VSCode
+      "name": "Launch Node App (7770)",
+      "type": "node",
+      "request": "launch",
+      "env": {
+        "DEBUG": "oidc-provider:*"
+      },
+      "skipFiles": ["<node_internals>/**"],
+      "program": "${workspaceFolder}\\apps\\oidc-provider-nest\\src\\main.ts",
+      "outFiles": ["${workspaceFolder}/**/*.js"]
+    },
+    {
       "type": "chrome",
       "request": "launch",
       "name": "Launch Chrome against localhost",
