--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -64,7 +64,7 @@
       "type": "chrome",
       "request": "launch",
       "name": "Launch Chrome against localhost",
-      "url": "http://localhost:4200",
+      "url": "http://localhost:4200/stats",
       "webRoot": "${workspaceFolder}"
     }
   ]
