--- a/tsconfig.json
+++ b/tsconfig.json
@@ -91,7 +91,8 @@
       "@tamu-gisc/common/utils/device/guards": ["libs/common/utils/device/guards/src/index.ts"],
       "@tamu-gisc/oidc/provider-nestjs": ["libs/oidc/provider-nestjs/src/index.ts"],
       "@tamu-gisc/oidc/admin": ["libs/oidc/admin/src/index.ts"],
-      "@tamu-gisc/oidc/admin-data-access": ["libs/oidc/admin-data-access/src/index.ts"]
+      "@tamu-gisc/oidc/admin-data-access": ["libs/oidc/admin-data-access/src/index.ts"],
+      "@tamu-gisc/oidc/admin-nest": ["libs/oidc/admin-nest/src/index.ts"]
     }
   },
   "exclude": ["node_modules", "tmp"]
