--- a/angular.json
+++ b/angular.json
@@ -3719,15 +3719,37 @@
           "options": {
             "targets": [
               {
-                "target": "oidc-admin-angular:build"
+                "target": "oidc-admin-nest:build"
               },
               {
-                "target": "oidc-admin-angular:server"
+                "target": "oidc-admin-nest:server"
               },
               {
-                "target": "oidc-admin-express:serve"
+                "target": "oidc-admin-nest:serve"
               }
             ]
+          }
+        }
+      }
+    },
+    "oidc-admin-nest-lib": {
+      "root": "libs/oidc/admin-nest",
+      "sourceRoot": "libs/oidc/admin-nest/src",
+      "projectType": "library",
+      "schematics": {},
+      "architect": {
+        "lint": {
+          "builder": "@angular-devkit/build-angular:tslint",
+          "options": {
+            "tsConfig": ["libs/oidc/admin-nest/tsconfig.lib.json", "libs/oidc/admin-nest/tsconfig.spec.json"],
+            "exclude": ["**/node_modules/**", "!libs/oidc/admin-nest/**"]
+          }
+        },
+        "test": {
+          "builder": "@nrwl/jest:jest",
+          "options": {
+            "jestConfig": "libs/oidc/admin-nest/jest.config.js",
+            "tsConfig": "libs/oidc/admin-nest/tsconfig.spec.json"
           }
         }
       }
