--- a/apps/oidc-provider-nest/tsconfig.json
+++ b/apps/oidc-provider-nest/tsconfig.json
@@ -1,15 +1,12 @@
 {
+  "extends": "../../tsconfig.json",
   "compilerOptions": {
-    "module": "commonjs",
-    "declaration": true,
-    "removeComments": true,
-    "emitDecoratorMetadata": true,
-    "experimentalDecorators": true,
-    "target": "es2017",
-    "sourceMap": true,
-    "outDir": "./dist",
-    "baseUrl": "./",
-    "incremental": true
+    "types": [
+      "node",
+      "jest"
+    ]
   },
-  "exclude": ["node_modules", "dist"]
+  "include": [
+    "**/*.ts"
+  ]
 }
