Added some security measures

--- a/package.json
+++ b/package.json
@@ -64,13 +64,15 @@
     "connect-sqlite3": "^0.9.11",
     "cookie-parser": "^1.4.3",
     "core-js": "^3.2.1",
+    "csurf": "^1.11.0",
     "deepmerge": "^4.2.2",
     "document-register-element": "1.13.1",
     "esri-loader": "~2.10.1",
+    "express-rate-limit": "^5.1.3",
     "express-session": "^1.17.0",
     "geojson-utils": "git+ssh://git@github.com/TamuGeoInnovation/Tamu.GeoInnovation.js.geojsonutils.git",
     "got": "^11.3.0",
-    "helmet": "^3.21.2",
+    "helmet": "^3.23.3",
     "interactjs": "^1.9.19",
     "jsonwebtoken": "^8.5.0",
     "mapbox-gl": "^1.10.0",
