Renamed OIDC Provider Nest lib
Caused name conflict between it and the app.

New lib name and scope: @tamu-gisc/oidc/provider-nestjs

--- a/nx.json
+++ b/nx.json
@@ -296,10 +296,10 @@
     "common-utils-device-guards": {
       "tags": []
     },
-    "oidc-provider-nest-e2e": {
+    "oidc-provider-nest": {
       "tags": []
     },
-    "oidc-provider-nest": {
+    "oidc-provider-nestjs": {
       "tags": []
     }
   }
