--- a/apps/cpa-nest/tsconfig.json
+++ b/apps/cpa-nest/tsconfig.json
@@ -3,7 +3,8 @@
   "compilerOptions": {
     "types": [
       "node",
-      "jest"
+      "jest",
+      "arcgis-js-api"
     ]
   },
   "include": [
