--- a/libs/cpa/data-api/tsconfig.lib.json
+++ b/libs/cpa/data-api/tsconfig.lib.json
@@ -2,7 +2,7 @@
   "extends": "./tsconfig.json",
   "compilerOptions": {
     "outDir": "../../../dist/out-tsc",
-    "types": []
+    "types": ["arcgis-js-api"]
   },
   "exclude": ["**/*.spec.ts"],
   "include": ["**/*.ts"]
