Added base data-access, admin, and public libs
- This is being done to improve library interoperability and clear up scopes (public and admin both use data-access)

--- a/nx.json
+++ b/nx.json
@@ -316,6 +316,15 @@
     },
     "ues-effluent-data-api-nest": {
       "tags": []
+    },
+    "cpa-data-access": {
+      "tags": []
+    },
+    "cpa-admin": {
+      "tags": []
+    },
+    "cpa-public": {
+      "tags": []
     }
   }
 }
