--- a/tsconfig.json
+++ b/tsconfig.json
@@ -92,7 +92,10 @@
       "@tamu-gisc/ues/effluent/ngx": ["libs/ues/effluent/ngx/src/index.ts"],
       "@tamu-gisc/maps/feature/feature-highlight": ["libs/maps/feature/feature-highlight/src/index.ts"],
       "@tamu-gisc/ues/effluent/data-api": ["libs/ues/effluent/data-api/src/index.ts"],
-      "@tamu-gisc/ues/effluent/common/entities": ["libs/ues/effluent/common/entities/src/index.ts"]
+      "@tamu-gisc/ues/effluent/common/entities": ["libs/ues/effluent/common/entities/src/index.ts"],
+      "@tamu-gisc/cpa/data-access": ["libs/cpa/data-access/src/index.ts"],
+      "@tamu-gisc/cpa/admin": ["libs/cpa/admin/src/index.ts"],
+      "@tamu-gisc/cpa/public": ["libs/cpa/public/src/index.ts"]
     }
   },
   "exclude": ["node_modules", "tmp"]
