Split off sidebar-menu styles
- Placed in its own sass partial module
- Added CPA sass library that contains style variables
- Added base CPA admin module and component

--- a/angular.json
+++ b/angular.json
@@ -3811,6 +3811,10 @@
           "styleext": "scss"
         }
       }
+    },
+    "cpa-sass": {
+      "projectType": "library",
+      "root": "libs/cpa/sass"
     }
   },
   "cli": {
