--- a/libs/cpa/admin/tsconfig.json
+++ b/libs/cpa/admin/tsconfig.json
@@ -1,7 +1,7 @@
 {
   "extends": "../../../tsconfig.json",
   "compilerOptions": {
-    "types": ["node", "jest"]
+    "types": ["node", "jest", "arcgis-js-api"]
   },
   "include": ["**/*.ts"]
 }
